fix(feedback): do not jump content when switching to basic mode (#8794)
* Make HC editor part of drawer to avoid weird sliding between preview and edit mode.

* TMP: try to fix editor jump

* Revert "Make HC editor part of drawer to avoid weird sliding between preview and edit mode."

This reverts commit c5941c1203a50c5f0adbbd493b884fa2d983b319.

* try with skeleton

---------

--- a/src/pages/settings/helpCenter/components/articles/HelpCenterEditor/HelpCenterEditor.less
+++ b/src/pages/settings/helpCenter/components/articles/HelpCenterEditor/HelpCenterEditor.less
@@ -4,7 +4,6 @@
 
 :local {
     .froalaEditorWrapper {
-        height: ~'calc(100% - 180px)';
         display: flex;
         flex-direction: column;
         min-height: 0;
@@ -185,6 +184,15 @@
                     background-color: var(--neutral-grey-2);
                 }
             }
+        }
+    }
+
+    .skeletonWrapper {
+        min-height: 400px;
+        padding: var(--layout-spacing-l);
+
+        .skeleton {
+            margin-bottom: var(--layout-spacing-m);
         }
     }
 }
